--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="coming-soon">
                     <div class="coming-soon-icon">🍽️</div>
                     <h2>Обеден Код</h2>
-                    <p>Скоро очаквайте...</p>
+                    <p>Очаквайте скоро...</p>
                 </div>
             </div>
         </section>
