--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
-            <div class="hero-badge">Здравословно Хранене</div>
-            <h1 class="hero-title">Сутрешният Код</h1>
-            <p class="hero-subtitle">79 Метаболитни Рецепти за Енергия и Баланс</p>
+            <div class="hero-badge">Твоят генератор за здраве и енергия</div>
+            <h1 class="hero-title">Здравословно Хранене</h1>
+            <p class="hero-subtitle">Генерирай Рецепта за Енергия и Баланс</p>
             <p class="hero-author">от Вили Вилс</p>
         </div>
     </header>
