--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <nav class="main-nav">
         <div class="nav-container">
             <!-- Mobile Menu Toggle -->
-            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()" aria-label="Toggle menu">
+            <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                 <span>☰</span>
             </button>
             
-            <button class="nav-btn" onclick="showSection('intro')">УВОД</button>
+            <button class="nav-btn" onclick="showSection('intro')">ВЪВЕДЕНИЕ</button>
             
             <div class="nav-dropdown">
                 <button class="nav-btn dropdown-trigger" onclick="toggleDropdown('morning-code')">
