--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hero-content">
             <div class="hero-badge">Твоят генератор за здраве и енергия</div>
             <h2 class="hero-title">Здравословно Хранене</h2>
-            <p class="hero-subtitle">Генерирай Рецепта за Енергия и Баланс</p>
+            <p class="hero-subtitle">Рецепти за Енергия и Баланс</p>
             <p class="hero-author">от Вили Вилс</p>
         </div>
     </header>
