--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="coming-soon">
                     <div class="coming-soon-icon">🍽️</div>
                     <h2>Обеден Код</h2>
-                    <p>Скоро очаквайте...</p>
+                    <p>Очаквайте скоро...</p>
                 </div>
             </div>
         </section>
@@ -147,7 +147,7 @@
                 <div class="coming-soon">
                     <div class="coming-soon-icon">🌙</div>
                     <h2>Вечерен Код</h2>
-                    <p>Скоро очаквайте...</p>
+                    <p>Очаквайте скоро...</p>
                 </div>
             </div>
         </section>
