--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="info-tips">
                             <h3>💡 Професионални съвети:</h3>
                             <ul>
-                                <li><strong>Планирайте предварително</strong> - Прегледайте рецептите вечерта преди и си подгответе съставките</li>
+                                <li><strong>Планирайте предварително</strong> - Прегледайте рецептите вечерта преди сън и си подгответе съставките</li>
                                 <li><strong>Експериментирайте</strong> - Не се страхувайте да адаптирате рецептите според вкуса си</li>
                                 <li><strong>Качествени съставки</strong> - Използвайте най-качествените съставки, които можете да си позволите</li>
                                 <li><strong>Консистентност</strong> - Най-добрите резултати идват от редовното хранене по този начин</li>
