--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span>☰</span>
             </button>
             
-            <button class="nav-btn" onclick="showSection('intro')">ВЪВЕДЕНИЕ</button>
+            <button class="nav-btn" onclick="showSection('intro')">НАЧАЛО</button>
             
             <div class="nav-dropdown">
                 <button class="nav-btn dropdown-trigger" onclick="toggleDropdown('morning-code')">
