--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             Познавам усещането, когато звънецът на будилника е като старт на нова битка. Знаеш, че денят ще е пълен с хора, задачи, очаквания – но за теб самата няма време.
                         </p>
                         <p>
-                            Бях точно там. В малкия град в Северна България, където израснах, ме научиха на дисциплина. Спортното училище ме научи да печеля. Но никой не ми показа как да се грижа за себе си в хаоса на ежедневието.
+                            Бях точно там. В малкия град в Северна България, където израснах и ме научиха на дисциплина. Спортното училище ме научи да печеля. Но никой не ми показа как да се грижа за себе си в хаоса на ежедневието.
                         </p>
                         <p class="highlight-text">
                             Когато станах майка на две деца, разбрах нещо страшно: <em>Можеш да даваш на всички наоколо, докато в теб самата не остане нищо.</em>
