--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="hero">
         <div class="hero-background"></div>
         <div class="hero-content">
-            <div class="hero-badge">Генерирай здравословна идея</div>
-            <h1 class="hero-title">Здравословно Хранене</h1>
-            <p class="hero-subtitle">Рецепти за Енергия и Баланс</p>
+            <div class="hero-badge">Здравословно Хранене</div>
+            <h1 class="hero-title">Сутрешният Код</h1>
+            <p class="hero-subtitle">79 Метаболитни Рецепти за Енергия и Баланс</p>
             <p class="hero-author">от Вили Вилс</p>
         </div>
     </header>
@@ -32,7 +32,7 @@
                 <span>☰</span>
             </button>
             
-            <button class="nav-btn" onclick="showSection('intro')">НАЧАЛО</button>
+            <button class="nav-btn" onclick="showSection('intro')">УВОД</button>
             
             <div class="nav-dropdown">
                 <button class="nav-btn dropdown-trigger" onclick="toggleDropdown('morning-code')">
@@ -139,7 +139,7 @@
                 <div class="coming-soon">
                     <div class="coming-soon-icon">🍽️</div>
                     <h2>Обеден Код</h2>
-                    <p>Очаквайте скоро...</p>
+                    <p>Скоро очаквайте...</p>
                 </div>
             </div>
         </section>
@@ -150,7 +150,7 @@
                 <div class="coming-soon">
                     <div class="coming-soon-icon">🌙</div>
                     <h2>Вечерен Код</h2>
-                    <p>Очаквайте скоро...</p>
+                    <p>Скоро очаквайте...</p>
                 </div>
             </div>
         </section>
@@ -281,6 +281,7 @@
     </footer>
 
     <script src="complete_recipes.js"></script>
+    <script src="chapter_summaries.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
