--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
                             Аз съм Вили Вилс – родена в малък град в северна България, професионален спортист и майка на две деца.
                         </p>
                         <p>
-                            Завърших Спортно училище като професионален спортист, където развих дълбока страст към спорта и разбиране за ключовата роля на здравословната храна в постигането на резултати.
+                            Завърших Спортно училище като професионален спортист, където развих дълбока страст към спорта и разбиране за ключовата роля на здравословната храна в постигането на успешни резултати.
                         </p>
                         <p>
-                            В момента съумявам да се справям с ежедневните предизвикателства на майчинството, като същевременно поддържам енергия и баланс чрез принципите, които споделям в тази книга.
+                            В момента съумявам да се справям с ежедневните предизвикателства на майка с две деца и забързано ежедневие, като същевременно поддържам енергия и баланс чрез принципите, които споделям в тази книга.
                         </p>
                         <p class="highlight-text">
-                            Тази книга е резултат от моя личен път – от хаоса към баланса, от умората към енергията, от "нямам време" към "давам си приоритет".
+                            Тази книга е резултат от моя личен път, от хаоса към баланса, от умората към енергията и от "нямам време" към "давам си приоритет".
                         </p>
                     </div>
                 </div>
