--- a/index.html
+++ b/index.html
@@ -177,8 +177,25 @@
                                 </ul>
                             </div>
                         </div>
-                        
-                        <div class="guide-step">
+
+                <!-- ✨ НОВ БЛОК - ОБЕДЕН КОД ✨ -->
+                <div class="guide-step">
+                    <div class="step-number">1.1</div>
+                    <div class="step-content">
+                        <h3>Обеден Код - Категории</h3>
+                        <p>Натиснете бутона <strong>"ОБЕДЕН КОД"</strong> в менюто и изберете една от петте категории обедни рецепти:</p>
+                        <ul>
+                            <li><strong>Салати</strong> (8-35 мин) - Свежи, ситни салати богати на протеини и фибри</li>
+                            <li><strong>Сандвичи</strong> (8-30 мин) - Балансирани сандвичи за енергия и ситост</li>
+                            <li><strong>Месни класици</strong> (15-60 мин) - Високопротеинови ястия с месо и риба</li>
+                            <li><strong>Вегетарианска сила</strong> (20-60 мин) - Растителни ястия с боб, леща и нахут</li>
+                            <li><strong>Бързи рецепти</strong> (5-15 мин) - Експресни обеди за заети хора</li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <!-- СТЪПКА 2 - ТЪРСЕНЕ И ФИЛТРИРАНЕ -->
+                            <div class="guide-step">
                             <div class="step-number">2</div>
                             <div class="step-content">
                                 <h3>Търсете и филтрирайте</h3>
