--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <h2 class="section-title">Пътят от хаоса до баланса</h2>
                     <div class="intro-text">
                         <p class="lead-paragraph">
-                            Здравей! Първо искам да ти кажа нещо важно: <strong>Не те познавам, но те разбирам.</strong>
+                            Здравей! Първо искам да ти кажа нещо важно: 
+                            <p></p><strong>Не те познавам, но те разбирам.</strong></p>
                         </p>
                         <p>
                             Познавам усещането, когато звънецът на будилника е като старт на нова битка. Знаеш, че денят ще е пълен с хора, задачи, очаквания – но за теб самата няма време.
