--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p class="footer-text">© 2025 Вили Вилс. Всички права запазени.</p>
-            <p class="footer-subtitle">Сутрешният Код - 79 Метаболитни Рецепти</p>
+            <p class="footer-text">© 2026 Вили Вилс. Всички права запазени.</p>
+            <p class="footer-subtitle">Рецепти за Енергия и Баланс</p>
         </div>
     </footer>
 
