--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="category-header">
             <h2 class="category-title">Обеден Код</h2>
             <p class="category-description">
-                75 здравословни обедни рецепти в 5 категории - от бързи салати до пълноценни месни ястия
+                79 здравословни обедни рецепти разпределени в 5 категории, от бързи салати до пълноценни месни ястия
             </p>
         </div>
         
@@ -372,7 +372,7 @@
                             Завърших Спортно училище като професионален спортист, където развих дълбока страст към спорта и разбиране за ключовата роля на здравословната храна в постигането на резултати.
                         </p>
                         <p>
-                            В момента съумявам да се справям с ежедневните предизвикателства на майчинството, като същевременно поддържам енергия и баланс чрез принципите, които споделям в тази книга.
+                            В момента съумявам да се справям с ежедневните предизвикателства на родител, като същевременно поддържам енергия и баланс чрез принципите, които споделям в тази книга.
                         </p>
                         <p class="highlight-text">
                             Тази книга е резултат от моя личен път – от хаоса към баланса, от умората към енергията, от "нямам време" към "давам си приоритет".
