--- a/index.html
+++ b/index.html
@@ -281,6 +281,22 @@
                     </div>
                 </div>
 
+                <div class="info-guide">
+                <!-- ОБЕДЕН КОД -->
+                <div class="guide-step">
+                    <div class="step-number">2</div>
+                    <div class="step-content">
+                        <h3>Изберете категория</h3>
+                        <p>Натиснете бутона <strong>"ОБЕДЕН КОД"</strong> в менюто и изберете една от петте категории рецепти:</p>
+                        <ul>
+                            <li><strong>Салати</strong> - Сутрешни рецепти за метаболитна оптимизация</li>
+                            <li><strong>Сандвичи</strong> - Бързи течни решения за моментална енергия</li>
+                            <li><strong>Месни Класици</strong> - Мощни закуски за устойчива енергия</li>
+                            <li><strong>Вегетарианска сила</strong> - Балансирани обедни решения</li>
+                            <li><strong>Бързи рецепти</strong> - Снакс опции за поддържане на фокус</li>
+                        </ul>
+                    </div>
+                </div>
                 <!-- ✨ НОВ БЛОК - ОБЕДЕН КОД ✨ -->
                 <div class="guide-step">
                     <div class="step-number">1.1</div>
