--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
                         <h3>Изберете категория</h3>
                         <p>Натиснете бутона <strong>"СУТРЕШЕН КОД"</strong> в менюто и изберете една от петте категории рецепти:</p>
                         <ul>
-                            <li><strong>Метаболитен рестарт</strong> - Сутрешни рецепти за метаболитна оптимизация</li>
-                            <li><strong>Течни еликсири</strong> - Бързи течни решения за моментална енергия</li>
-                            <li><strong>Енергийни закуски</strong> - Мощни закуски за устойчива енергия</li>
-                            <li><strong>Обядът като нов старт</strong> - Балансирани обедни решения</li>
-                            <li><strong>Междинни хранения</strong> - Снакс опции за поддържане на фокус</li>
+                            <li><strong>Метаболитен рестарт</strong> (2-15 мин) - Сутрешни рецепти за метаболитна оптимизация</li>
+                            <li><strong>Течни еликсири</strong> (2-10 мин) - Бързи течни решения за моментална енергия</li>
+                            <li><strong>Енергийни закуски</strong> (5-30 мин) - Мощни закуски за устойчива енергия</li>
+                            <li><strong>Обядът като нов старт</strong> (8-30 мин) - Балансирани обедни решения</li>
+                            <li><strong>Междинни хранения</strong> (2-20 мин) - Снакс опции за поддържане на фокус</li>
                         </ul>
                     </div>
                 </div>
@@ -304,11 +304,11 @@
                         <h3>Изберете категория</h3>
                         <p>Натиснете бутона <strong>"ВЕЧЕРЕН КОД"</strong> в менюто и изберете една от петте категории рецепти:</p>
                         <ul>
-                            <li><strong>Вечеря на тиган</strong> - Подбрани рецепти с минимално миене</li>
-                            <li><strong>Протеинова крепост</strong> - Високопротеинови вечери за възстановяване</li>
-                            <li><strong>Бърза вечеря</strong> - Експресни вечери със супер храни</li>
-                            <li><strong>Класическа вечеря</strong> - Обновени Български класики</li>
-                            <li><strong>Растителна енергия</strong> - 100% вегетариански рецепти</li>
+                            <li><strong>Вечеря на тиган</strong> (15-60 мин) - Подбрани рецепти с минимално миене</li>
+                            <li><strong>Протеинова крепост</strong> (8-70 мин) - Високопротеинови вечери за възстановяване</li>
+                            <li><strong>Бърза вечеря</strong> (5-25 мин) - Експресни вечери със супер храни</li>
+                            <li><strong>Класическа вечеря</strong> (25-75 мин) - Обновени Български класики</li>
+                            <li><strong>Растителна енергия</strong> (12-55 мин)- 100% вегетариански рецепти</li>
                         </ul>
                     </div>
                 </div>
@@ -360,7 +360,7 @@
                         <div class="info-tips">
                             <h3>💡 Професионални съвети:</h3>
                             <ul>
-                                <li><strong>Планирайте предварително</strong> - Прегледайте рецептите вечерта преди и си подгответе съставките</li>
+                                <li><strong>Планирайте предварително</strong> - Прегледайте рецептите вечерта преди лягане и си подгответе съставките</li>
                                 <li><strong>Експериментирайте</strong> - Не се страхувайте да адаптирате рецептите според вкуса си</li>
                                 <li><strong>Качествени съставки</strong> - Използвайте най-качествените съставки, които можете да си позволите</li>
                                 <li><strong>Консистентност</strong> - Най-добрите резултати идват от редовното хранене по този начин</li>
@@ -382,7 +382,7 @@
                     <h2 class="section-title">За мен</h2>
                     <div class="about-text">
                         <p class="lead-paragraph">
-                            Аз съм Вили Вилс – родена в малък град в северна България, професионален спортист и майка на две деца.
+                            Аз съм Вили Вилс, родена в малък град в северна България, професионален спортист и майка на две деца.
                         </p>
                         <p>
                             Завърших Спортно училище като професионален спортист, където развих дълбока страст към спорта и разбиране за ключовата роля на здравословната храна в постигането на резултати.
@@ -391,7 +391,7 @@
                             В момента съумявам да се справям с ежедневните предизвикателства на родител, като същевременно поддържам енергия и баланс чрез принципите, които споделям в тази книга.
                         </p>
                         <p class="highlight-text">
-                            Тази книга е резултат от моя личен път – от хаоса към баланса, от умората към енергията, от "нямам време" към "давам си приоритет".
+                            Тази книга е резултат от моя личен път - от хаоса към баланса, от умората към енергията, от "нямам време" към "давам си приоритет".
                         </p>
                     </div>
                 </div>
