--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             Здравей! Първо искам да ти кажа нещо важно: <strong>Не те познавам, но те разбирам.</strong>
                         </p>
                         <p>
-                            Познавам усещането, когато звънецът на будилника е като старт на нова битка. Знаеш, че денят ще е пълен с хора, задачи, очаквания – но за теб самата няма време.
+                            Познавам усещането, когато звънецът на будилника е като старт на нова битка. Знаеш, че денят ще е пълен с хора, задачи, очаквания - но за теб самата няма време.
                         </p>
                         <p>
                             Бях точно там. В малкия град в Северна България, където израснах, ме научиха на дисциплина. Спортното училище ме научи да печеля. Но никой не ми показа как да се грижа за себе си в хаоса на ежедневието.
